objects/SFDC_Plan_Resource_Association__c.object
<CustomObject><fields>
        <fullName>Channel_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Plan</label>
        <referenceTo>SFDC_Channel_Account_Plan__c</referenceTo>
        <relationshipName>R00N4100000GiurKEAR</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Team</relationshipLabel>
        <relationshipName>R00N4100000Giur3EAB</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restocking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Sales Rep</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Assigns specific resources to a channel plan. Align resources with objectives, and provide a clear picture to partners of who their channel support team is.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Channel Team</label><nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Channel Team Member</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Channel Team</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>